[gd_scene load_steps=7 format=3 uid="uid://db5yyodexjuf1"]

[ext_resource type="Texture2D" uid="uid://eb55mdcve1m0" path="res://assets/menu/image0.jpg" id="1_m1u38"]
[ext_resource type="Texture2D" uid="uid://5aahd84rcsov" path="res://assets/menu/backgroundcolor.png" id="2_34m6s"]
[ext_resource type="Script" path="res://scripts/menu/quit.gd" id="2_ni7lo"]
[ext_resource type="Script" path="res://scripts/menu/new_game.gd" id="3_f6fg1"]
[ext_resource type="PackedScene" path="res://scenes/run.tscn" id="3_kh7bf"]
[ext_resource type="Script" path="res://scripts/menu/options.gd" id="4_vktvh"]

[node name="Menu" type="MarginContainer"]
clip_contents = true
offset_right = 480.0
offset_bottom = 270.0

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 2
texture = ExtResource("2_34m6s")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "The Shotgun over Fishmouth"

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="NewGame" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Dive in"
script = ExtResource("3_f6fg1")
run = ExtResource("3_kh7bf")

[node name="Options" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Options"
script = ExtResource("4_vktvh")

[node name="Quit" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Quit"
script = ExtResource("2_ni7lo")

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Version - 0.1.0"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MenuImage" type="TextureRect" parent="HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(190, 270)
layout_mode = 2
texture = ExtResource("1_m1u38")
expand_mode = 4

[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="HBoxContainer/VBoxContainer/MenuOptions/NewGame" method="_on_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="HBoxContainer/VBoxContainer/MenuOptions/NewGame" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="HBoxContainer/VBoxContainer/MenuOptions/NewGame" method="_on_mouse_exited"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="HBoxContainer/VBoxContainer/MenuOptions/Options" method="_on_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="HBoxContainer/VBoxContainer/MenuOptions/Options" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="HBoxContainer/VBoxContainer/MenuOptions/Options" method="_on_mouse_exited"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/Quit" to="HBoxContainer/VBoxContainer/MenuOptions/Quit" method="_on_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Quit" to="HBoxContainer/VBoxContainer/MenuOptions/Quit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Quit" to="HBoxContainer/VBoxContainer/MenuOptions/Quit" method="_on_mouse_exited"]
